<resources>

    <string name="app_name">com.adamrocker.android.abc2012f</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ABC2011f S-CITY</string>
    
    <string name="tab_label0">Recent</string>
    <string name="tab_label1">Picture</string>
    <string name="tab_label2">Locale</string>
    
    <string name="behind_menu_prof">Masahiko Adachi</string>
    <string name="behind_menu_divider0">Features</string>
    <string name="behind_menu_divider1">Messages</string>
    <string name="behind_menu_item0">Group</string>
    <string name="behind_menu_item1">Chat</string>
    <string name="behind_menu_item2">Shuffle</string>
    <string name="behind_menu_item3">Time</string>
    <string name="behind_menu_item4">Place</string>
    <string name="behind_menu_item5">Music</string>
    <string name="behind_menu_item6">Video</string>
    <string name="behind_menu_item7">Access</string>
    <string name="behind_menu_item8">Storage</string>
    <string name="behind_menu_item9">Help</string>
    
    <string name="behind_info_title1">Akira Onishi</string>
    <string name="behind_info_desc1">aAsync() .then(function () { return bAsync(); }) .then(function () { return cAsync(); }) .done(function () { finish(); }); // #andeb14</string>
    <string name="behind_info_title0">J.Maurice</string>
    <string name="behind_info_desc0">Free SSL certificate from @startssl is great and works in all browsers, I love these guys.</string>
    <string name="behind_info_title1">Akira Onishi</string>
    <string name="behind_info_desc1">aAsync() .then(function () { return bAsync(); }) .then(function () { return cAsync(); }) .done(function () { finish(); }); // #andeb14</string>
    <string name="behind_info_title2">Tim Bray</string>
    <string name="behind_info_desc2">Paul Krugman’s introduction to Asimov’s re-issued “Foundation Trilogy”: goo.gl/KOmMv</string>
</resources>